# clawhive

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  install.sh  justfile  release.toml
.githooks/: pre-push
.github/workflows/: release.yml
crates/clawhive-bus/src/: lib.rs
crates/clawhive-channels/src/: dingtalk.rs  discord.rs  feishu.rs  imessage.rs  slack.rs  telegram.rs  wecom.rs  whatsapp.rs
crates/clawhive-cli/: Cargo.toml
crates/clawhive-cli/src/: main.rs  setup.rs
crates/clawhive-core/: Cargo.toml
crates/clawhive-core/src/: config.rs  config_diff.rs  config_view.rs  consolidation.rs  context.rs  dotenv.rs  lib.rs  memory_tools.rs  message_tool.rs  orchestrator.rs  policy.rs  runtime_config.rs  schedule_tool.rs  shell_tool.rs  skill.rs  skill_install.rs  slash_commands.rs  subagent.rs  subagent_tool.rs  templates.rs  tool.rs  workspace_manager.rs
crates/clawhive-core/tests/: integration.rs  mock_server_integration.rs  openai_mock_server_integration.rs  skill_install_authz.rs  (+1 more)
crates/clawhive-gateway/: Cargo.toml
crates/clawhive-tui/: Cargo.toml
crates/clawhive-tui/src/: lib.rs
crates/clawhive-tui/src/code/: diff.rs  footer.rs  header.rs  history.rs  markdown.rs  mod.rs  scroll.rs  shimmer.rs
crates/clawhive-tui/src/code/bottom_pane/: approval.rs  file_search.rs  input.rs  mod.rs  shortcuts.rs  slash_command.rs
crates/clawhive-tui/src/dashboard/: mod.rs
crates/clawhive-tui/src/shared/: mod.rs  styles.rs
docs/plans/: 2026-03-05-code-tui-redesign.md  2026-03-05-skill-tool.md
web/: package.json
(+80 files in other folders)
